force-app/main/default/objects/Employee__c/Employee__c.object-meta.xml
<CustomObject>
    <label>직원</label>
    <nameField>
        <displayFormat>EM-{YY}{000}</displayFormat>
        <label>직원번호</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>직원</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>