force-app/main/default/objects/Employee__c/fields/EmployeeName__c.field-meta.xml
<CustomField>
    <fullName>EmployeeName__c</fullName>
    <label>직원이름</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>