force-app/main/default/objects/Employee__c/fields/JobLevel__c.field-meta.xml
<CustomField>
    <fullName>JobLevel__c</fullName>
    <label>직급</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>선임</fullName>
            </value>
            <value>
                <fullName>책임</fullName>
            </value>
            <value>
                <fullName>수석</fullName>
            </value>
            <value>
                <fullName>임원</fullName>
            </value>
            <value>
                <fullName>대표이사</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>