force-app/main/default/objects/Employee__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>입사일</label>
    <type>Date</type>
</CustomField>